# dotted-crew

./: .env_example  .gitignore  CONTRIBUTING.md  Dockerfile  README.Docker.md  README.md  agents.py  docker-compose.yaml  process.py  pyproject.toml  requirements.txt  server.py  tasks.py
src/: crew.py  main.py  process.py  server.py
src/agents/: expert_travel_agent.py  local_crime_expert.py  local_culture_expert.py  local_food_expert.py  local_law_expert.py  weather_expert.py
src/models/: address.py  crime.py  cuisine.py  culture.py  diet.py  enums.py  food_allergy.py  generate_itinerary_request_body.py  itinerary.py  itinerary_data.py  itinerary_draft.py  itinerary_request_body.py  law.py  location.py  meal.py  recreation.py  schedule.py  schedule_line_item.py  weather.py
src/tasks/: crime_tasks.py  culture_tasks.py  food_tasks.py  itinerary_tasks.py  law_tasks.py  weather_tasks.py
src/utils/: chat_groq.py
