[tool.poetry]
name = "dotted-crew"
version = "0.1.0"
description = "AI crew for generating itineraries"
authors = ["Billy Le"]

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.13"
crewai = "0.28.8"
unstructured = "==0.10.25"
pyowm = "3.3.0"
tools = "^0.1.9"
python-dotenv = "1.0.0"
groq = "^0.5.0"
fastapi = "^0.110.2"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
langchain-groq = "^0.1.3"
python-decouple = "^3.8"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
